tests/fixtures/invalid/set_lshift_str.py
# Cannot left shift Set[int] and Str
x: set[int] = {1, 2, 3} << "hello"
